Набросал начальные реализации + исправил предыдущие. Надо будет подумать как можно получше все это дело упаковать в функции.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIPHER</title>
+    <title>GIFER</title>
     <link rel="icon" href="mylabel.png">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,7 +16,7 @@
                 <a href="#">
                     <img src="mylabel.png" alt="#" class="gallery__header__img">
                 </a>
-                <h1 class="gallery__title">GIPHER</h1>
+                <h1 class="gallery__title">GIFER</h1>
             </div>
             <nav class="gallery__navbar">
                  <ul class="gallery__tabs">
@@ -40,19 +40,15 @@
             <form class="gallery__field field" id="gallery__form">
                 <input type="text" class="field__input">
                 <div class="field__controls">
-                    <button class="field-btn btn btn--input">
+                    <button class="field-btn btn btn--input btn--clear">
                         <i class="fa-solid fa-x"></i>
                     </button>
-                    <button class="field-btn btn btn--input" type="submit" form="gallery__form">
+                    <button class="field-btn btn btn--input btn--search" type="submit" form="gallery__form">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </div>
             </form>
-            <div class="gallery__preview preview">
-                <ul class="gallery__preview-list preview-list">
-                    
-                </ul>
-            </div>
+            <div class="gallery__preview preview"></div>
             <button class="gallery__more-btn btn">
                 <i class="fa-solid fa-angles-down fa-2x"></i>
             </button>
