Подправил логику, частично очистил от лишнего.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 </div>
             </form>
             <div class="gallery__preview preview"></div>
-            <button class="gallery__more-btn btn">
+            <div class="gallery__random-slider random-slider"></div>
+            <button class="gallery__more-btn btn btn--more">
                 <i class="fa-solid fa-angles-down fa-2x"></i>
             </button>
         </div>
