Основной функционал доделан, остается пощупать цветовую схему + подчистить и покрасивше запаковать все.

--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
                 </div>
             </form>
             <div class="gallery__preview preview"></div>
-            <div class="gallery__random-slider random-slider"></div>
+
+            <a class="gallery__error error">
+                <img src="./404error.png" class="error__illustration" alt="#">
+            </a>
+
             <button class="gallery__more-btn btn btn--more">
                 <i class="fa-solid fa-angles-down fa-2x"></i>
             </button>
         </div>
+
+        <a href="#" class="anchor">
+            <i class="fa-solid fa-angle-up"></i>
+        </a>
 
         <div class="attribution">
             <h3>Powered By<a href="https://giphy.com/"> GIPHY</a></h3>
