--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div class="preloader"></div>
     
-    <div class="gallery container">
-        <div class="gallery__inner">
+    <div class="gallery ">
+        <div class="gallery__inner container">
             <div class="gallery__header">
                 <a href="">
                     <img src="mylabel.png" alt="#" class="gallery__header__img">
